<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrippingPhotoManager</string>
    <string name="loading">Loading…</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photo_view">PhotoView</string>
    <string name="select_new_path">Choose new album</string>
    <string name="status_album_is_empty">This album is empty, choose a new one.</string>
    <string name="status_invalid_picture">%1$s is not a valid picture</string>
    <string name="status_picture_index">Picture %1$d of %2$d\n%3$s\nSize: %4$.2f MB</string>
    <string name="status_programmer_error">Error when loading %1$s. The programmer of this application sucks: %2$s</string>
    <string name="description_mark_for_deletion">Mark this image for deletion</string>
    <string name="status_reviewing_pending_ops">You are reviewing images with pending changes. Confirm changes in the menu..</string>
    <string name="photo_viewer_alt_tag">Picture preview</string>
    <string name="status_album_has_no_pictures_to_show">No pictures to show</string>
    <string name="status_no_pictures_with_pending_ops">No pictures with pending operations.</string>
    <string name="menu_review_pics_and_apply_changes">Review and apply changes…</string>
    <string name="menu_choose_different_path">Select different album (change path)</string>
    <string name="menu_stop_reviewing_changes_and_view_full_album">Stop reviewing changes. Back to album.</string>
    <string name="status_viewing_full_album">You are now viewing the full album</string>
    <string name="menu_apply_pending_changes">Apply all pending changes</string>
    <string name="alert_confirm_pending_ops_title">Are you sure?</string>
    <string name="alert_confirm_pending_ops_msg">You are about to apply ALL pending changes. The images marked for deletion will be gone. Forever. There is no going back. Are you really sure?</string>
    <string name="title_activity_pic_deleter">PicDeleterActivity</string>
    <string name="btn_stop_applying_pending_ops">Stop pending operations…</string>
    <string name="btn_back_to_album">Go back to album</string>
    <string name="label_pending_ops_cancelled">Partially cancelled…</string>
    <string name="label_pending_ops_done">Completed</string>
    <string name="menu_goto_picture">Jump to picture…</string>
    <string name="title_jump_to_pic">Jump to picture</string>
    <string name="alt_text_open_menu">Open application menu</string>
    <string name="alt_text_open_full_img">View full picture</string>
    <string name="description_mark_for_compression">Compress this image to save space</string>
    <string name="current_status">Current status</string>
    <string name="dialog_current_path_selection">Selected path</string>
    <string name="ops_applier_about_to_start">"About to apply all pending operations in album "</string>
    <string name="ops_applier_removed_file">"Removed %1$s"</string>
    <string name="ops_applier_error_removing_file">"Error removing %1$s"</string>
    <string name="ops_applier_start_file_compress">"Compressing %1$s (%2$.2f MB) [May take a while]"</string>
    <string name="ops_applier_file_compress_done">"Done, compressed %1$s to %2$.2f MB"</string>
    <string name="ops_applier_error_compressing_file">"Error compressing %1$s (ret=%2$d)"</string>
    <string name="menu_help">Help</string>
    <string name="menu_review_mode_help">Help</string>
    <string name="help_dialog_title">Help</string>
    <string name="album_mode_help_msg">
        Welcome to Tripping Photo Manager - https://github.com/nicolasbrailo/TrippingSdCardPhotoManager\n\n

        * Review your pictures by swiping.\n
        * Use the bar above to mark pictures for deletion. It won\'t be deleted until you confirm.\n
        * You can also mark pictures to be compressed.\n
        * When done reviewing, apply all operations at once: select  \"Review and apply changes…\"
        from the action bar.\n
        * Once in review mode, you can review all the pending operations.\n
        * When ready, go once more to the menu and select the option \"Apply all pending changes\".\n\n

        Tripping Photo Manager can compress photos using ImageMagick. Using a 90% compression usually results
        in no visible quality difference, even at 100% zoom. Mark the pictures you want to compress
        with the button in the action bar.\n\n

        Tripping Photo Manager bundles ImageMagick: any action that you can do with \"mogrify\" can also
        be done with Tripping Photo Manager.\n\n

        This is an open source project. Go to https://github.com/nicolasbrailo/TrippingSdCardPhotoManager
        to request features or just to check out the source code.
    </string>
    <string name="review_mode_help_msg">
        You are in review mode: review all the changes you have selected, then in the action bar
        select the \"Apply all pending changes\" option.\n\n

        Remember that deleting pictures can never be undone.\n\n

        More info? Go to https://github.com/nicolasbrailo/TrippingSdCardPhotoManager
    </string>
    <string name="menu_create_back_up">Back up album</string>
    <string name="alert_confirm_backup_title">Back up</string>
    <string name="alert_confirm_backup_msg">Will copy all the pictures to a local storage in your device. This may take a long time. Backup path:</string>
    <string name="menu_rename_album">Rename this album</string>
    <string name="title_rename_album">Rename this album</string>
    <string name="dialog_album_rename_failed">Error renaming</string>
    <string name="dialog_album_rename_failed_msg">Renaming this album failed. Are you sure you have permissions to do so?</string>
    <string name="album_renamed_notify">Album renamed to %1$s</string>
    <string name="ops_applier_backing_up">Creating back up of %1$s to  %2$s…</string>
    <string name="ops_applier_back_up_done">Done!</string>
    <string name="ops_applier_back_up_failed">Backing up failed</string>
    <string name="ops_applier_back_up_dir_create_fail">Couldn\'t create backup directory %1$s, backup may fail</string>
    <string name="ops_applier_file_compress_cant_remove">Couldn\'t remove uncompressed file: both the compressed and uncompressed images will be available</string>
    <string name="ops_applier_file_compress_cant_rename">Couldn\'t rename compressed file, please rename it manually</string>

</resources>
