<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nico.trippingsdcardphotomanager.PhotoView">

    <item android:id="@+id/menu_review_pics_and_apply_changes"
          android:title="@string/menu_review_pics_and_apply_changes"
          android:visible="true" />

    <item android:id="@+id/menu_stop_reviewing_changes_and_view_full_album"
        android:title="@string/menu_stop_reviewing_changes_and_view_full_album"
        android:visible="false" />

    <item android:id="@+id/menu_apply_pending_changes"
        android:title="@string/menu_apply_pending_changes"
        android:visible="false" />

    <item android:id="@+id/menu_goto_picture"
        android:title="@string/menu_goto_picture"
        android:visible="true" />

    <item android:id="@+id/menu_choose_another_album"
        android:title="@string/menu_choose_different_path" />

</menu>
